--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "dotenv": "^8.0.0"
+    "dotenv": "^8.0.0",
+    "opusscript": "0.0.6",
+    "ytdl-core": "^0.29.2"
   },
   "devDependencies": {}
 }
